--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+# Created by https://www.gitignore.io/api/ocaml
+
+### OCaml ###
 *.annot
 *.cmo
 *.cma
@@ -18,3 +22,6 @@ _build/
 # oasis generated files
 setup.data
 setup.log
+
+
+# End of https://www.gitignore.io/api/ocaml
